java-app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: k3s-java-app-service
  namespace: default

spec:
  selector:
    inservice: k3s-java-app-service
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8084
