postgresql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: k3s-postgres-service

spec:
  selector:
    inservice: k3s-postgres-service
  type: ClusterIP
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
